@@ -26,6 +26,7 @@ ChangeLog
     * SDK ignores hidden .<foldername> folders and files inside
     * Don't throw an exception on processing invalid metadata
     * layer_height attribute added to FDM metadata
+    * estimated_to_seconds function
 
 0.2.0 (2020-12-14)
 
